cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)

# Set the build type.  Options are:
#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
#  Debug          : w/ debug symbols, w/o optimization
#  Release        : w/o debug symbols, w/ optimization
#  RelWithDebInfo : w/ debug symbols, w/ optimization
#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
#set(ROS_BUILD_TYPE RelWithDebInfo)

rosbuild_init()

################-added for ubc-vision-pr2#########
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

find_package(VTK REQUIRED)
######################################

#set the default path for built executables to the "bin" directory
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#set the default path for built libraries to the "lib" directory
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

#uncomment if you have defined messages
#rosbuild_genmsg()
#uncomment if you have defined services
#rosbuild_gensrv()

#common commands for building c++ executables and libraries
#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
#target_link_libraries(${PROJECT_NAME} another_library)
#rosbuild_add_boost_directories()
#rosbuild_link_boost(${PROJECT_NAME} thread)
#rosbuild_add_executable(example examples/example.cpp)
#target_link_libraries(example ${PROJECT_NAME})

rosbuild_add_executable (example src/example.cpp)
rosbuild_add_executable (example_voxelgrid src/example_voxelgrid.cpp)
rosbuild_add_executable (planes src/planes.cpp)
rosbuild_add_executable (dominant_plane_with_obstacle_clustering src/dominant_plane_with_obstacle_clustering.cpp)
rosbuild_add_executable (cylinder_segmentation src/cylinder_segmentation.cpp)
#rosbuild_add_executable (cloud_viewer src/cloud_viewer.cpp)
#rosbuild_add_executable (pose_estimation_cluster src/pose_estimation_cluster.cpp)
rosbuild_add_executable (don_segmentation src/don_segmentation.cpp)
rosbuild_add_executable (minicut_segmentation src/minicut_segmentation.cpp)
rosbuild_add_executable (region_growing src/region_growing.cpp)
rosbuild_add_executable (centroid_estimation src/centroid_estimation.cpp)

